@@ -91,6 +91,8 @@ module ActiveScaffold
           end
         end
         _add_sti_create_links if active_scaffold_config.add_sti_create_links?
+        ActiveScaffold::Config::Core.custom_modules.each { |mod| include mod }
+        active_scaffold_config.custom_modules.each { |mod| include mod }
         active_scaffold_config._cache_lazy_values
         active_scaffold_config.deep_freeze!
       end
